[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["examples/basic", "fixtures"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
smplx-macros = { path = "./crates/macros", version = "0.0.5" }
smplx-build = { path = "./crates/build", version = "0.0.5" }
smplx-test = { path = "./crates/test", version = "0.0.5" }
smplx-regtest = { path = "./crates/regtest", version = "0.0.5" }
smplx-sdk = { path = "./crates/sdk", version = "0.0.5" }
smplx-std = { path = "./crates/simplex", version = "0.0.5" }

serde = { version = "1.0.228", features = ["derive"] }
hex = { version = "0.4.3" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9", features = ["compress"] }
thiserror = { version = "2.0.18" }
toml = { version = "0.9.8" }
minreq = { version = "2.14.1", features = ["https", "json-using-serde"] }

electrsd = { version = "0.29.0", features = ["legacy"] }
simplicityhl = { version = "0.5.0" }

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"
deprecated_in_future = "warn"

[workspace.lints.clippy]
multiple_crate_versions = "allow"
